[tool.poetry]
name = "tkisowriter"
version = "0.1.0"
description = ""
authors = ["katmai <katmai.mobil@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/katmai1/tkisowriter"

[tool.poetry.scripts]
tkisowriter = "tkisowriter:main"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
